# SignEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
SignE/: CMakeLists.txt
SignE/src/: Application.cpp  Application.h  Log.cpp  Log.h  Ref.h  SignE.h
SignE/src/Application/: Application.cpp  Application.h  ApplicationLayer.cpp  ApplicationLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  Window.cpp  Window.h
SignE/src/FileSystem/: VirtualFileSystem.cpp  VirtualFileSystem.h
SignE/src/Input/: Input.cpp  Input.h
SignE/src/Platform/OpenGL/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
SignE/src/Renderer/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
SignE/src/Resources/: Model.cpp  Model.h  Resources.cpp  Resources.h  Texture.cpp  Texture.h
SignE/src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
SignE/src/Scripting/: LuaScriptEngine.cpp  LuaScriptEngine.h  LuaScriptGlue.cpp  LuaScriptGlue.h  ScriptEngine.cpp  ScriptEngine.h
SignEditor/: CMakeLists.txt
SignEditor/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
